# og_image_writer

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.github/workflows/: rust.yml  test-docs.yml  test-rs.yml
dev/: Cargo.toml
dev/src/components/: absolute.rs  background_color.rs  background_image.rs  container.rs  ellipsis.rs  encode.rs  font_context.rs  font_kern.rs  into_vec.rs  mod.rs  row_container.rs  textarea.rs  white_space.rs
dev/tests/: compare_image.rs  update_snapshots.rs
docs/: .eslintrc  README.md  index.html  package.json  tsconfig.json  vite.config.js
docs/src/: App.svelte  Playground.svelte
docs/src/constants/: image.ts  styles.ts  url.ts
docs/src/helpers/: wasmHelper.ts
docs/src/lib/Canvas/: Canvas.svelte  Content.svelte  index.ts
docs/src/lib/Code/: Code.svelte
docs/src/lib/Header/: Header.svelte  index.ts
docs/src/lib/InlineButton/: InlineButton.svelte  index.ts
docs/src/lib/Introduction/: Introduction.svelte
docs/src/lib/Spacer/: Spacer.svelte  index.ts
docs/src/lib/WriterForm/: ChildList.svelte  ContainerForm.svelte  ElementForm.svelte  ElementSelect.svelte  ErrorMessage.svelte  FormLabel.svelte  FormSection.svelte  ImgForm.svelte  InlineFileInput.svelte  StyleForm.svelte  TextAreaForm.svelte  TextAreaItemForm.svelte  Title.svelte  WindowStyleForm.svelte  WriterForm.svelte
docs/src/renderer/: draw.ts  render.ts  style.ts  types.ts
examples/: Cargo.toml  absolute.rs  background_color.rs  background_image.rs  container.rs  ellipsis.rs  encode.rs  font_context.rs  font_kern.rs  into_vec.rs  row_container.rs  simple.rs  textarea.rs  white_space.rs
fonts/: Mplus1-LICENSE.txt
og_image_writer/: Cargo.toml
og_image_writer/src/: char.rs  context.rs  element.rs  error.rs  font.rs  font_context.rs  font_trait.rs  glyph.rs  image.rs  img.rs  layout.rs  lib.rs  line_breaker.rs  png.rs  renderer.rs  style.rs  writer.rs
og_image_writer/src/layout/: container.rs  img.rs  split_text.rs  text.rs  textarea.rs
src/: element.rs  lib.rs  line_breaker.rs  style.rs  writer.rs
src/layout/: img.rs
wasm/: Cargo.toml  README.md
wasm/.cargo/: config
wasm/script/: build.sh
wasm/src/: lib.rs  style.rs
