[package]
name = "examples"
version = "0.0.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
og_image_writer = { path = "../og_image_writer" }

[[example]]
name = "background_image"
path = "background_image.rs"

[[example]]
name = "background_color"
path = "background_color.rs"

[[example]]
name = "absolute"
path = "absolute.rs"

[[example]]
name = "ellipsis"
path = "ellipsis.rs"
