[package]
name = "examples"
version = "0.0.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
og_image_writer = { path = "../og_image_writer" }
anyhow = "1.0"
image = "0.23"

[[example]]
name = "background_image"
path = "background_image.rs"

[[example]]
name = "background_color"
path = "background_color.rs"

[[example]]
name = "absolute"
path = "absolute.rs"

[[example]]
name = "ellipsis"
path = "ellipsis.rs"

[[example]]
name = "container"
path = "container.rs"

[[example]]
name = "into_vec"
path = "into_vec.rs"

[[example]]
name = "encode"
path = "encode.rs"

[[example]]
name = "textarea"
path = "textarea.rs"

[[example]]
name = "row_container"
path = "row_container.rs"

[[example]]
name = "font_context"
path = "font_context.rs"

[[example]]
name = "font_kern"
path = "font_kern.rs"

[[example]]
name = "white_space"
path = "white_space.rs"
