[package]
name = "og_image_writer"
version = "0.7.0"
edition = "2018"
license = "MIT"
keywords = ["open-graphic", "image", "og", "canvas"]
categories = ["web-programming", "rendering", "graphics"]
readme = "../README.md"
repository = "https://github.com/keiya01/og_image_writer"
description = "Generate an Open Graphic Image using a CSS-like API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
imageproc = "0.22"
ab_glyph = "0.2.12"
thiserror = "1.0"
wasm-bindgen = { version = "0.2" }
conv = "0.3.3"

[dev-dependencies]
anyhow = "1.0"
